# Blind

./: .gitignore  BUILD_CPP.md  BlindAssistant_VC.cpp  CMakeLists.txt  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  app.py  custom_worker.py  deploy.ps1  package-lock.json  render.yaml  requirements.txt  test_safety_case.py  verify_pipeline.py
BlindAssistant/: __init__.py  main.py  utils.py
BlindAssistant/tracker/: __init__.py  collision.py  harvester.py  hungarian.py  kalman.py  llm_reasoner.py  metrics.py  model_manager.py  motion.py  occupancy_grid.py  risk.py  safe_path.py  speaker.py  validation_results.json  voice.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
shared_registry/: active_model.json
shared_registry/datasets/: active_learning.jsonl
templates/: index.html
